--- a/myproject/assets/css/style.css
+++ b/myproject/assets/css/style.css
@@ -110,6 +110,7 @@ a:hover {
   font-size: 2.5rem;
   background-color: rgb(0, 0, 0, 0);
   border: none;
+  font-family: monospace;
 }
 
 .logout-button:hover {
