--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -20,7 +20,7 @@
 
             <a href="/"><span role="img" aria-label="Home" title="Home">Home</span></a> |
             <a href="/about"><span role="img" aria-label="About" title="About">About</span></a> |
-            <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts" title="Posts">Posts</span></a> |
+            <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts" title="Posts">Posts</span></a>
         </div>
 
         <div>
