--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Attena";
-  src: url("../fonts/ATTENA.OTF") format("opentype");
+  font-family: "Mauline";
+  src: url("../fonts/MAULINE.OTF") format("opentype");
 }
 
 * {
@@ -129,6 +129,63 @@ a:hover {
 }
 
 .post-title {
-  font-family: "Attena";
+  font-family: "Mauline";
   font-size: 2.5rem;
+}
+
+/* body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+} */
+
+.card {
+  background-color: #555;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-picture {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.details {
+  display: flex;
+  align-items: center;
+}
+
+.username {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.bio {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.social-links {
+  display: flex;
+}
+
+.social-link {
+  display: inline-block;
+  padding: 8px 16px;
+  margin-right: 10px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.social-link:hover {
+  background-color: #0056b3;
 }
