--- a/myproject/templates/layout.html
+++ b/myproject/templates/layout.html
@@ -17,10 +17,14 @@
 <body>
     <nav class="nav">
         <div>
-
+            {% if user.is_authenticated %}
+            <span role="img" aria-label="Home" title="Home">{{ user.username }}</span> |
+            {% else %}
+            <span>✴</span> |
+            {% endif %}
+            <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts" title="Posts">Posts</span></a> |
             <a href="/"><span role="img" aria-label="Home" title="Home">Home</span></a> |
-            <a href="/about"><span role="img" aria-label="About" title="About">About</span></a> |
-            <a href="{% url 'posts:list' %}"><span role="img" aria-label="Posts" title="Posts">Posts</span></a>
+            <a href="/about"><span role="img" aria-label="About" title="About">About</span></a>
         </div>
 
         <div>
