--- a/myproject/assets/css/style.css
+++ b/myproject/assets/css/style.css
@@ -24,7 +24,10 @@ nav {
 }
 
 main {
-  padding: 1rem;
+  padding: 0 1rem;
+  margin: 2.5rem auto;
+  max-width: 40rem;
+  line-height: 1.6;
 }
 
 section {
@@ -36,6 +39,7 @@ section {
 h1,
 h2 {
   font-size: 2.5rem;
+  line-height: 1.2;
 }
 
 p {
@@ -131,4 +135,61 @@ a:hover {
 .post-title {
   font-family: "Mauline";
   font-size: 2.5rem;
+}
+
+/* body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+} */
+
+.card {
+  background-color: #555;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-picture {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.details {
+  display: flex;
+  align-items: center;
+}
+
+.username {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.bio {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.social-links {
+  display: flex;
+}
+
+.social-link {
+  display: inline-block;
+  padding: 8px 16px;
+  margin-right: 10px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.social-link:hover {
+  background-color: #0056b3;
 }
