--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -24,7 +24,10 @@ nav {
 }
 
 main {
-  padding: 1rem;
+  padding: 0 1rem;
+  margin: 2.5rem auto;
+  max-width: 40rem;
+  line-height: 1.6;
 }
 
 section {
@@ -36,6 +39,7 @@ section {
 h1,
 h2 {
   font-size: 2.5rem;
+  line-height: 1.2;
 }
 
 p {
