--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -2,6 +2,10 @@
   font-family: "Mauline";
   src: url("../fonts/MAULINE.OTF") format("opentype");
 }
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+}
 
 * {
   margin: 0;
@@ -14,6 +18,7 @@ body {
   background-color: black;
   color: whitesmoke;
   font-size: 3rem;
+  font-family: "Roboto";
 }
 
 nav {
@@ -119,7 +124,7 @@ a:hover {
   font-size: 2.5rem;
   background-color: rgb(0, 0, 0, 0);
   border: none;
-  font-family: monospace;
+  font-family: "Roboto";
 }
 
 .logout-button:hover {
