added a couple more fonts for styling and changed the posts styling for readability

--- a/myproject/posts/templates/posts/posts_list.html
+++ b/myproject/posts/templates/posts/posts_list.html
@@ -26,7 +26,7 @@
           {% endif %}
         </p>
         <p class="post-title"> {{ post.title }}</p>
-        <p>{{ post.body }}</p>
+        <p class="post-body">{{ post.body }}</p>
       </h2>
     </a>
   </article>
