--- a/myproject/assets/css/style.css
+++ b/myproject/assets/css/style.css
@@ -1,10 +1,14 @@
 @font-face {
-  font-family: "Mauline";
-  src: url("../fonts/MAULINE.OTF") format("opentype");
-}
-@font-face {
   font-family: "Roboto";
   src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Aeonik";
+  src: url("../fonts/AeonikTRIAL-Regular.otf") format("opentype");
+}
+@font-face {
+  font-family: "Gill Sans";
+  src: url("../fonts/Gill\ Sans\ Light.otf") format("opentype");
 }
 
 * {
@@ -138,16 +142,16 @@ a:hover {
 }
 
 .post-title {
-  font-family: "Mauline";
+  font-family: "Aeonik";
+  font-weight: bold;
   font-size: 2.5rem;
 }
 
-/* body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
-} */
+.post-body {
+  font-family: "Gill Sans";
+  font-weight: normal;
+  font-size: 1.1rem;
+}
 
 .card {
   background-color: #555;
