--- a/myproject/posts/templates/posts/post_page.html
+++ b/myproject/posts/templates/posts/post_page.html
@@ -4,6 +4,6 @@
   <h1 class="post-title">{{post.title}}</h1>
 
   <p>{{ post.date }}</p>
-  <p>{{ post.body }}</p>
+  <p class="post-body">{{ post.body }}</p>
 </section>
 {% endblock %}
