--- a/myproject/assets/css/style.css
+++ b/myproject/assets/css/style.css
@@ -3,8 +3,8 @@
   src: url("../fonts/Roboto-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Aeonik";
-  src: url("../fonts/AeonikTRIAL-Regular.otf") format("opentype");
+  font-family: "Newake";
+  src: url("../fonts/Newake-Font-Demo.otf") format("opentype");
 }
 @font-face {
   font-family: "Gill Sans";
@@ -22,7 +22,7 @@ body {
   background-color: black;
   color: whitesmoke;
   font-size: 3rem;
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
 }
 
 nav {
@@ -30,6 +30,7 @@ nav {
   background-color: #44b78b;
   color: white;
   font-size: 2.5rem;
+  font-family: "Roboto";
 }
 
 main {
@@ -125,10 +126,11 @@ a:hover {
 
 .logout-button {
   color: #81dbb8;
-  font-size: 2.5rem;
+  font-size: inherit;
   background-color: rgb(0, 0, 0, 0);
   border: none;
   font-family: "Roboto";
+  padding: 0;
 }
 
 .logout-button:hover {
@@ -142,9 +144,9 @@ a:hover {
 }
 
 .post-title {
-  font-family: "Aeonik";
-  font-weight: bold;
+  font-family: "Newake";
   font-size: 2.5rem;
+  font-weight: lighter;
 }
 
 .post-body {
