--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,8 +1,9 @@
 {% extends 'layout.html' %}
 {% block title %} Home {% endblock %}
 {% block content %}
-<h1>Home</h1>
-<p>This is a personal project built using Django Framework and deployed on Render for you viewing.<br> The web app
+<h1 class="post-title">Home</h1>
+<p class="post-body">This is a personal project built using Django Framework and deployed on Render for you viewing.<br>
+  The web app
   allows
   users to sign up and login, create a post and upload an image attached to the post.</p>
 {% endblock %}
