--- a/myproject/posts/templates/posts/post_new.html
+++ b/myproject/posts/templates/posts/post_new.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %} {% block title %} New Post {% endblock %} {% block content %}
 <section>
-  <h1>New Post</h1>
-  <form class="form-with-validation" action="{% url 'posts:new-post' %}" method="post" enctype="multipart/form-data">
+  <h1 class="post-title">New Post</h1>
+  <form class="form-with-validation post-body" action="{% url 'posts:new-post' %}" method="post"
+    enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <button class="form-submit">Add Post</button>
